--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ pids
 # For Mac users without global gitignore
 # http://islegend.com/development/setting-global-gitignore-mac-windows/
 **/.DS_Store
+
+auth.js
